# peridot

./: .api-linter.yaml  .bazelignore  .bazelrc  .editorconfig  .envrc  .gitattributes  .gitignore  .prettierrc  .swcrc  AUTHORS  BUILD  BUILD.bazel  LICENSE  WORKSPACE  ci.bazelrc  deps.bzl  go.mod  go.sum  macdev.bazelrc  package.json  pnpm-lock.yaml  tsconfig.json  vendor.go
base/: BUILD  BUILD.bazel
base/ci/: defaults.star
base/go/: BUILD  BUILD.bazel  auth.go  db.go  flags.go  frontend_server.go  fs.go  grpc.go  log.go  pb.go  pointer.go  slice.go  temporal.go  wrapper_helpers.go
base/go/awsutils/: BUILD  config.go
base/go/forge/: BUILD  caching.go  caching_test.go  forge.go
base/go/forge/github/: BUILD  github.go  github_test.go
base/go/forge/gitlab/: BUILD  gitlab.go
base/go/kv/: BUILD  kv.go
base/go/kv/dynamodb/: BUILD  dynamodb.go
base/go/storage/: BUILD  storage.go
base/go/storage/detector/: BUILD  detector.go
base/go/storage/memory/: BUILD  memory.go  memory_test.go
base/go/storage/s3/: BUILD  detector.go  s3.go
base/proto/: BUILD  kv_page_token.proto
base/ts/: BUILD  BUILD.bazel  global.d.ts  reqap.ts  resource.ts
base/ts/mui/: BUILD  Drawer.tsx  NewResource.tsx  ResourceTable.tsx  ResourceView.tsx  theme.tsx
devtools/devdex/: BUILD  config.yaml  readme.md  runner.sh
devtools/devtemporal/: BUILD  runner.sh
devtools/garrison/: readme.md
devtools/garrison/cmd/garrison/: BUILD  main.go
devtools/garrison/examples/: default_flags.star  istio.star
devtools/garrison/internal/pkg/kubernetes/: BUILD  deployment.go  env.go  kubernetes.go  metadata.go  service.go  virtual_service.go
devtools/garrison/internal/pkg/starlark/: BUILD  BUILD.bazel  builtin_args.go  builtin_default.go  builtin_environment.go  builtin_exec.go  builtin_flags.go  builtin_health.go  builtin_health_grpc.go  builtin_health_http.go  builtin_namespace.go  builtin_port.go  builtin_security.go  builtin_service.go  builtin_var.go  kv.go  stage.go  starlark.go  utils.go
devtools/nfv2/: BUILD  main.go
devtools/taskrunner2/: BUILD  BUILD.bazel  defs.bzl  main.go  readme.md  runner.sh
devtools/yfs2/: readme.md
scripts/: addlicense  gosetup  govendor  lintproto  recdb
tools/build_rules/copybara/: BUILD  copybara.bzl  sync.bash
tools/build_rules/oapi_gen/: BUILD  defs.bzl  oapi.sh  ts.bzl
tools/build_rules/ui_bundle/: BUILD  defs.bzl  esbuild.config.mjs
tools/build_rules/ui_library/: BUILD  defs.bzl
tools/kernelmanager/: BUILD  readme.md
tools/kernelmanager/cmd/getchangelog/: main.go  main_test.go
tools/kernelmanager/cmd/getchangelog/testdata/: 1.spec  2.spec
tools/kernelmanager/cmd/kernel_repack_test/: BUILD  main.go
tools/kernelmanager/cmd/kernelmanager_dev/: BUILD  main.go
tools/kernelmanager/cmd/kernelmanager_server/: BUILD  main.go
tools/kernelmanager/cmd/kernelmanager_ui/: BUILD  main.go
tools/kernelmanager/cmd/kernelmanager_worker/: BUILD  main.go
tools/kernelmanager/cmd/updatekernel/: main.go
tools/kernelmanager/kernel_repack/: BUILD  repack.go
tools/kernelmanager/kernel_repack/kernelorg/: BUILD  kernelorg.go  releaseatom.go  torvalds.asc
tools/kernelmanager/kernel_repack/v1/: BUILD  v1.go
tools/kernelmanager/kernel_repack/v1/data/: config-aarch64  config-x86_64  lt.spec  ml.spec  rocky-sigkernel.cer  rockydup1.x509  rockykpatch1.x509  secureboot-sig-kernel-aarch64.cer
tools/kernelmanager/packager/: BUILD  repack.go
tools/kernelmanager/packager/kernelorg/: BUILD  releaseatom.go
tools/kernelmanager/packager/v1/: BUILD  v1.go
tools/kernelmanager/packager/v1/data/: config-aarch64  config-x86_64  ml.spec  secureboot-sig-kernel-aarch64.cer  x509.genkey
tools/kernelmanager/proto/v1/: BUILD  changelog.proto  kernel.proto  kernel_state.proto  kernelmanager.proto  update.proto
tools/kernelmanager/rpc/: BUILD  kernel.go  operation.go  rpc.go
tools/kernelmanager/ui/: App.tsx  BUILD  GetKernel.tsx  Kernels.tsx  api.ts  entrypoint.tsx  ui.go
tools/kernelmanager/worker/: BUILD  kernel.go  worker.go  workflows.go
tools/mothership/: BUILD  BUILD.bazel  readme.md
tools/mothership/admin/rpc/: BUILD  main_test.go  operation.go  rescue.go  retract.go  rpc.go  worker.go  worker_test.go
tools/mothership/admin/ui/: App.tsx  BUILD  CreateWorker.tsx  Dashboard.tsx  Entries.tsx  GetEntry.tsx  GetWorker.tsx  Workers.tsx  api.ts  entrypoint.tsx  main.go  ui.go
tools/mothership/cmd/mship_admin_server/: BUILD  main.go
tools/mothership/cmd/mship_admin_ui/: BUILD  main.go
tools/mothership/cmd/mship_api/: BUILD  BUILD.bazel  deploy.star  main.go
tools/mothership/cmd/mship_dev/: BUILD  main.go
tools/mothership/cmd/mship_server/: BUILD  main.go
tools/mothership/cmd/mship_ui/: BUILD  main.go
tools/mothership/cmd/mship_worker_server/: BUILD  main.go
tools/mothership/db/: BUILD  batch.go  entry.go  worker.go
tools/mothership/migrations/: 000001_init.down.sql  000001_init.up.sql  BUILD  migrations.go
tools/mothership/proto/admin/: BUILD
tools/mothership/proto/admin/v1/: BUILD  bugtracker.proto  mship_admin.proto  worker.proto
tools/mothership/proto/v1/: BUILD  BUILD.bazel  batch.proto  bugtracker.proto  entry.proto  process_rpm.proto  srpm_archiver.proto  worker.proto
tools/mothership/rpc/: BUILD  batch.go  entry.go  operation.go  ping.go  rpc.go  worker.go
tools/mothership/ui/: App.tsx  BUILD  BUILD.bazel  Dashboard.tsx  Entries.tsx  GetEntry.tsx  api.ts  entrypoint.tsx  main.go  ui.go
tools/mothership/worker_client/dnf/: BUILD  dnf.go
tools/mothership/worker_server/: BUILD  entry.go  entry_test.go  forge_test.go  main_test.go  process_rpm.go  process_rpm_test.go  retract_entry.go  retract_entry_test.go  utils.go  worker.go  workflows.go  workflows_test.go
tools/mothership/worker_server/forge/: BUILD  forge.go
tools/mothership/worker_server/forge/github/: BUILD  github.go
tools/mothership/worker_server/srpm_import/: BUILD  srpm_import.go  srpm_import_test.go  srpmproc_compat.go  srpmproc_compat_test.go
